GPencil: frames interpolation erase strokes #76078

Closed
opened 2020-04-25 00:07:26 +02:00 by Samuel Bernou · 5 comments
Member

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.87

Blender Version
Broken: version: 2.83 (sub 15), branch: master, commit date: 2020-04-23 21:07, hash: d712f1f83a
Worked: (newest version of Blender that worked as expected)

Short description of error
Grease pencil interpolatation between two frame with Ctrl+Alt+E sometimes completely mess up the strokes
Never had the issue in 2.82.

Exact steps for others to reproduce the error
bug_interpolation_lines.blend
On the given file, in Grease pencil draw mode, use interpolate (ctrl+alt+E) with cursor in 3D viewport context.
The breakdown frame and previous frame are instantly lost once the modal start (and still missing after confirm or cancel).
**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.87 **Blender Version** Broken: version: 2.83 (sub 15), branch: master, commit date: 2020-04-23 21:07, hash: `d712f1f83a` Worked: (newest version of Blender that worked as expected) **Short description of error** Grease pencil interpolatation between two frame with Ctrl+Alt+E sometimes completely mess up the strokes Never had the issue in 2.82. **Exact steps for others to reproduce the error** : [bug_interpolation_lines.blend](https://archive.blender.org/developer/F8493297/bug_interpolation_lines.blend) On the given file, in Grease pencil draw mode, use interpolate (ctrl+alt+E) with cursor in 3D viewport context. The breakdown frame and previous frame are instantly lost once the modal start (and still missing after confirm or cancel).
Author
Member

Added subscriber: @Pullup

Added subscriber: @Pullup
Antonio Vazquez was assigned by Samuel Bernou 2020-04-25 00:08:42 +02:00

I can reproduce with your file, but not with other files.

PS: Please, never assign yourself a task to someone. This must be done by developers.

I can reproduce with your file, but not with other files. PS: Please, never assign yourself a task to someone. This must be done by developers.

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Antonio Vazquez changed title from Grease pencil frames interpolation erase strokes to GPencil: frames interpolation erase strokes 2020-04-25 08:54:07 +02:00

This issue was referenced by 53106934f9

This issue was referenced by 53106934f97d5a41a38a2f597c4165837b51b1c6

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#76078
No description provided.